# ExteriorMapping

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  doxyfile  imgui.ini  log.txt
eval/: graphs.py  imgui.ini
include/: Application.h  Buffer.h  Camera.h  Device.h  Framebuffer.h  Image.h  Material.h  Mesh.h  Model.h  Pipeline.h  RenderPass.h  Renderer.h  Sampler.h  Scene.h  SwapChain.h  Texture.h  View.h  ViewGrid.h  Window.h  glm_include_unified.h
include/descriptors/: Pool.h  Set.h  SetLayout.h
include/pipelines/: ComputePipeline.h  GraphicsPipeline.h
include/utils/: Callbacks.h  Config.h  Constants.h  DebugHelpers.h  FileHandling.h  Import.h  Input.h  Math.h  Structs.h  VulkanHelpers.h
res/: config.json  config1cam.json  config1grid.json  config2grid.json  config4grid_step05.json  config4grid_step1.json  config6grid.json
res/configs/: last.json
res/configs/by_step/: config.json
res/configs/eval/: 22.json  23.json  33.json  34.json  44.json  45.json  55.json  56.json  66.json  67.json  77.json  78.json  88.json
res/configs/full_grid/: config1grid.json  config2grid.json  config4grid_step05.json  config4grid_step1.json  config6grid.json
res/shaders/: comp.spv  constants.glsl  cull.comp  frag.spv  generatePoints.comp  intersect.comp  intervalsInterpolate.comp  macros.glsl  novelView.comp  offscreen.frag  offscreen.vert  points.frag  points.vert  quad.frag  quad_frag.spv  raysEval.comp  raysEval.spv  shader.comp  shader.frag  shader.vert  structs.glsl  utils.glsl  vert.spv
res/shaders/compiled/: cull.spv  intersect.spv  intervalsInterpolate.spv  novelView.spv  quad_frag.spv
src/: Application.cpp  Buffer.cpp  Camera.cpp  Device.cpp  Framebuffer.cpp  Image.cpp  Material.cpp  Mesh.cpp  Model.cpp  Pipeline.cpp  RenderPass.cpp  Renderer.cpp  Sampler.cpp  Scene.cpp  SwapChain.cpp  Texture.cpp  View.cpp  ViewGrid.cpp  Window.cpp  imgui.ini  main.cpp
src/descriptors/: Pool.cpp  Set.cpp  SetLayout.cpp
src/pipelines/: ComputePipeline.cpp  GraphicsPipeline.cpp
src/utils/: Config.cpp  FileHandling.cpp  Import.cpp  Math.cpp  VulkanHelpers.cpp
